Overflow fix

--- a/Dashboardify/Dashboardify.Web/app/styles/components/_dashboard-list.scss
+++ b/Dashboardify/Dashboardify.Web/app/styles/components/_dashboard-list.scss
@@ -1,3 +1,4 @@
 .dashboard-list {
   @include outer-container();
+  overflow: hidden;
 }
